<resources>
    <string name="app_name">Github User</string>
    <string name="search">search</string>
    <string name="search_hint">Masukkan Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="folower_fragment">Follower Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="following_fragment">Following Fragment</string>
    <string name="tab_text_follower">Follower</string>
    <string name="tab_text_following">Following</string>
    <string name="name">name</string>
    <string name="label_company">Company</string>
    <string name="label_location">Location</string>
    <string name="label_repository">Repository</string>
    <string name="label_follower">Follower</string>
    <string name="label_following">Following</string>
    <string name="repository">10</string>
    <string name="username">username</string>
    <string name="full_name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="todo">TODO</string>
    <string name="setting">Setting</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dark_mode">Dark Mode</string>

</resources>