<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:context="com.toniel.githubuser.activity.DetailUserActivity">

        <RelativeLayout
            android:id="@+id/detail_profile"
            android:layout_width="match_parent"
            android:layout_height="326dp"
            android:background="?attr/colorPrimary"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/image_avatar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="9dp"
                    android:layout_marginBottom="9dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_baseline_person_24" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/label_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:text="@string/label_repository"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/tv_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_repository"
                        android:layout_alignParentTop="false"
                        android:layout_centerInParent="true"
                        android:text="@string/repository"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/label_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:text="@string/label_follower"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/tv_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_follower"
                        android:layout_alignParentTop="false"
                        android:layout_centerInParent="true"
                        android:text="@string/repository"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/label_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:text="@string/label_following"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/tv_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_following"
                        android:layout_alignParentTop="false"
                        android:layout_centerInParent="true"
                        android:text="@string/repository"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </RelativeLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/username"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/full_name"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_name"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:text="@string/company"
                android:textAlignment="center"
                android:textColor="#C7C7C7"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_baseline_business_24" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_company"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/location"
                android:textColor="#C7C7C7"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

            <ImageButton
                android:id="@+id/btn_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_favorite_border_48"
                android:text="Button" />


        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:tabTextColor="?attr/colorPrimary"
                tools:ignore="SpeakableTextPresentCheck" />
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>




    </LinearLayout>


</ScrollView>
